--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4018,8 +4018,8 @@ body {
   
   .carrd2-button-horizontal button {
   width: 100%;
-  padding: 12px;
-  background-color: #fff;
+  padding: auto;
+  background-color: #ff0000;
   color: black;
   border: none;
   border-radius: 8px;
@@ -4109,8 +4109,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90vw;
-    max-width: 450px;
-    height: 80vh;
+    max-width: 550px;
+    height: 95vh;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
@@ -4118,22 +4118,22 @@ body {
     #second-ml-popup-form video {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     }
     #second-ml-form-content-wrapper {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    padding: 20px;
+    padding: 0px;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 0 0 15px 15px;
     text-align: center;
     }
     .second-ml-form-embedBody p {
     color: white !important;
-    margin-bottom: 10px;
-    font-size: 16px;
+    margin-bottom: 5px;
+    font-size: 1.2rem;
     }
     .second-ml-form-formContent {
     display: flex;
@@ -4154,7 +4154,7 @@ body {
     }
     .second-ml-button-horizontal button {
     width: 100%;
-    padding: 12px;
+    padding: auto;
     background-color: #ff0000;
     color: black!important;
     border: none;
@@ -4164,14 +4164,14 @@ body {
     cursor: pointer;
     }
     .second-ml-button-horizontal button:hover {
-    background-color: #000000;
+    background-color: #ffffff;
     }
     #second-close-btn {
     background-color: rgba(255, 0, 0, 0.8);
     color: white;
     border: none;
     font-size: 24px;
-    padding: 8px;
+    padding: auto;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -4180,6 +4180,7 @@ body {
     top: 12px;
     right: 15px;
     line-height: 1;
+    z-index: 1000;
     }
     #second-ml-overlay {
     display: none;
