--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3339,7 +3339,7 @@ body.is-menu-visible #menu .close {
 
 #footer {
   padding: 5em 0 6em 0;
-  background-color: #050505;
+  background-color: #f6f6f6;
 }
 
 #footer > .inner {
@@ -4171,7 +4171,7 @@ body {
     color: white;
     border: none;
     font-size: 24px;
-    padding: auto;
+    padding: 0;
     width: 40px;
     height: 40px;
     border-radius: 50%;
